--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Emberi-miniaturok_66989
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Tonelli, Sándor
     gutenberg_agent_id: '54065'
     url: http://www.gutenberg.org/2009/agents/54065
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66989#Emberi-miniaturok
 gutenberg_issued: '2021-12-21'
 identifiers:
   gutenberg: '66989'
